# AnomalyLongRangeInteraction

./: .gitignore  CMakeLists.txt  README.md
exact_diag/: BZZOBCLocHamN10theta0.6000.txt  BZZOBCLocHamN16theta0.6000.txt  BZZOBCLocHamN8theta0.6000.txt  BZZOBCN10theta0.7854alpha1.txt  BZZOBCN12theta0.7854alpha1.txt  BZZOBCN14theta0.7854alpha1.txt  BZZOBCN16theta0.7854alpha1.txt  BZZOBCN8theta0.7854alpha1.txt  EnergyLocHamN10theta0.6000.txt  EnergyLocHamN12theta0.6000.txt  EnergyLocHamN14theta0.6000.txt  EnergyLocHamN16theta0.6000.txt  EnergyLocHamN18theta0.6000.txt  EnergyLocHamN20theta0.6000.txt  EnergyLocHamN22theta0.6000.txt  EnergyLocHamN24theta0.6000.txt  EnergyLocHamN8theta0.6000.txt  EnergyN10.txt  EnergyN10alpha1.txt  EnergyN10theta0.6.txt  EnergyN10theta0.6000alpha1.txt  EnergyN10theta0.6alpha1.txt  EnergyN11theta0.6alpha1.txt  EnergyN12.txt  EnergyN12alpha1.txt  EnergyN12theta0.6.txt  EnergyN12theta0.6000alpha1.txt  EnergyN12theta0.6alpha1.txt  EnergyN13theta0.6alpha1.txt  EnergyN14.txt  EnergyN14alpha1.txt  EnergyN14theta0.6.txt  EnergyN14theta0.6000alpha1.txt  EnergyN14theta0.6alpha1.txt  EnergyN15theta0.6alpha1.txt  EnergyN16.txt  EnergyN16alpha1.txt  EnergyN16theta0.6.txt  EnergyN16theta0.6000alpha1.txt  EnergyN16theta0.6alpha1.txt  (+82 more)
figure/: JconstP1.eps
plot/: CentralChargePhaseDiagram.m  PlotEE.m  PlotSz.m
plot/central_charge/: centralchargeL128Level0P1.mat  centralchargeL128Level0P2.mat
src/: dmrg.cpp  dmrg_my_measure.h  dmrg_z2z2.cpp  gqdouble.h  measure1.cpp  measure2.cpp  myutil.cpp  myutil.h  operators.cpp  operators.h  params.json  params_case.h  qldouble.h  vmps.cpp  vmps_scan_theta.cpp  z2z2qn.h
